--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,3 +15,12 @@ services:
         links:
             - elasticsearch:elasticsearch
         entrypoint: wait-for-it/wait-for-it.sh -t 30 elasticsearch:9200 -- python screeps_etl/screepsstats.py
+    nginx:
+        image: nginx:1.9.6
+        ports:
+            - "8000:80"
+        links:
+            - kibana
+        volumes:
+            - ./nginx/nginx.conf:/etc/nginx/nginx.conf
+            - ./nginx/htpasswd:/etc/nginx/htpasswd
