Use token instead of username.

--- a/.screeps_settings.dist.yaml
+++ b/.screeps_settings.dist.yaml
@@ -1,6 +1,5 @@
 # Copy this to .screeps_settings.yaml and fill it out.
 
 # Screeps account info
-screeps_username: 'email@domain.tld'
-screeps_password: 'YourPasswordHere!'
+screeps_token: 'xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx'    
 screeps_ptr: false
