--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 version: '2'
 services:
     elasticsearch:
-        image: elasticsearch
+        image: elasticsearch:6.5.0
         volumes:
             - ./esdata:/usr/share/elasticsearch/data
     kibana:
-        image: kibana
+        image: kibana:5.6.13
         links:
             - elasticsearch
     screeps-stats:
