--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,20 +5,20 @@ services:
         volumes:
             - ./esdata:/usr/share/elasticsearch/data
     kibana:
-        image: kibana:5.6.13
+        image: kibana:6.5.0
         links:
             - elasticsearch
     screeps-stats:
         build: .
         links:
             - elasticsearch:elasticsearch
-        entrypoint: wait-for-it/wait-for-it.sh -t 30 elasticsearch:9200 -- python screeps_etl/screepsstats.py
+        entrypoint: wait-for-it/wait-for-it.sh -t 30 elasticsearch:9200 -- python /screeps-stats/screepsstats.py
     nginx:
         image: nginx:1.9.6
         ports:
-            - "3000:80"
+            - "5601:80"
         links:
             - kibana
         volumes:
-            - ./nginx/nginx.conf:/etc/nginx/nginx.conf
-            - ./nginx/htpasswd:/etc/nginx/htpasswd
+            - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+            - ./nginx/htpasswd:/etc/nginx/htpasswd:ro
